优化智能助手路由逻辑